fix: hide scrollbar in mobile

--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,24 @@ body {
   display: none; /* 隐藏箭头 */
 }
 
+@media (pointer: coarse) {
+  /* 移动端设备，隐藏滚动条 */
+  ::-webkit-scrollbar {
+    display: none;
+    width: 0px;
+    height: 0px;
+    background: transparent;
+  }
+  /* Firefox 18+ 新标准 */
+  html, body, main, section, div {
+    scrollbar-width: none !important;
+    -ms-overflow-style: none !important;
+  }
+  /* Safari 隐藏滑块 */
+  ::-webkit-scrollbar-thumb { background: transparent; }
+  ::-webkit-scrollbar-track { background: transparent; }
+}
+
 /* 后续 section 使用渐变背景 */
 section:not(:first-child) {
   background-image: linear-gradient(to bottom left, #eddfdc, #dddddd);
